old/05-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-csi-app-set
spec:
  selector:
    matchLabels:
      app: mypod
  serviceName: "my-frontend"
  replicas: 1
  template:
    metadata:
      labels:
        app: mypod
    #Template del pod    
    spec:
      containers:
      - name: my-frontend
        image: busybox
        #Crear un sleep infinito para mantener vivo el container
        args:
        - sleep
        - infinity
        #Monstar un volumen en /data
        volumeMounts:
        - mountPath: "/data"
          name: csi-pvc
  #Declarar un volumen        
  volumeClaimTemplates:
  - metadata:
      name: csi-pvc
    spec:
      #Permitir escribir en el volumen
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      #Elegir driver de un proveedor que permitira crear un disco virtual.
      #En este ejemplo se utiliza un driver Digital Ocean.
      #Si queremos usar tenemos Digital Ocean, podemos usar Minikube, Google, AWS, etc.
      storageClassName: do-block-storage
