old/10-configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      volumeMounts:
        #Guardar valores del configmap como un archivo
        - name: config
          mountPath: "/config"
          readOnly: true
  #Se creará un volumen para una configuración de tipo configmap
  volumes:
    - name: config
      configMap:
        # el nombre del configmap que queremos montar
        name: game-demo
        # Un arreglo de keys del configmap para crear como archivos
        items:
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"
