old/09-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
spec:
  rules:
  - http:
      paths:
      #Para el path /v1 ...
      - path: /v1
        pathType: Prefix
        backend:
        #... se redirigirá al servicio hello-v1
          service:
            name: hello-v1
            port:
              number: 8080
      #Para el path /v2 ...
      - path: /v2
        pathType: Prefix
        backend:
        #... se redirigirá al servicio hello-v1
          service:
            name: hello-v2
            port:
              number: 8080
